--- a/css/reset.css
+++ b/css/reset.css
@@ -21,28 +21,34 @@ html {
 }
 
 .content {
-    background-color: white;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 1em;
-}
-
-.content {
-    margin-left: 5%;
-    margin-right: 5%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    padding-top: 0.1em;
-    padding-bottom: 0.2em;
+    background-color: white;
+
+    margin-left: 2em;
+    margin-right: 2em;
+    margin-top: 1em;
+    
+    padding: 1em;
 }
 
-table {
+.content table {
     border-collapse: collapse;
-    width: 100%;
+    width: 20em;
+    font-size: small;
+    margin: 0 auto;   
 }
 
 td, th {
-    border: 1px solid #dddddd;
+    border: 0.2em solid #dddddd;
+    text-align: center;
+    padding: 0.1em;
+}
+
+td a {
+    padding: 1em;
+}
+
+.left {
     text-align: left;
-    padding: 8px;
-  }
+}
